# TECPROG

FASE2/: Makefile  Makefile.am  Makefile.am.old  Makefile.in  bala.xpm  config.status  corsinha_tunado.xpm  fase2  fase2.c  ronaldinho_mask.xpm  samp.xpm  teclado  teclado.c  teste  teste2  teste3  teste3.c
FASE2/.deps/: fase2.Po  teclado.Po
FASE2/autom4te.cache/: requests  traces.0  traces.1
FASE2/imagens/corsinha/: corsinha_tunado135.xpm  corsinha_tunado157,5.xpm  corsinha_tunado22,5.xpm  corsinha_tunado225.xpm  corsinha_tunado292,5.xpm  corsinha_tunado315.xpm  corsinha_tunado90.xpm
FASE2/imagens/saveiro/: saveiro_full.xpm  saveiro_rabaixado202,5.xpm  saveiro_rabaixado270.xpm  saveiro_rabaixado90.xpm
FASE2/naves/: corsinha00.xpm  corsinha02.xpm  corsinha03.xpm  corsinha05.xpm  corsinha06.xpm  corsinha08.xpm  corsinha09.xpm  corsinha11.xpm  corsinha12.xpm  corsinha13.xpm  corsinha14.xpm  corsinha15.xpm  corsinha_full.xpm  corsinhamask00.xpm  corsinhamask01.xpm  corsinhamask02.xpm  corsinhamask03.xpm  corsinhamask04.xpm  corsinhamask08.xpm  corsinhamask09.xpm  corsinhamask10.xpm  corsinhamask11.xpm  corsinhamask15.xpm  saveiro02.xpm  saveiro06.xpm  saveiro10.xpm  saveiro_full_mask.xpm  saveiromask00.xpm  saveiromask01.xpm  saveiromask02.xpm  saveiromask03.xpm  saveiromask04.xpm  saveiromask05.xpm  saveiromask06.xpm  saveiromask07.xpm  saveiromask08.xpm  saveiromask09.xpm  saveiromask10.xpm  saveiromask11.xpm  saveiromask12.xpm  (+3 more)
FASE2/xwc-1.1/: Makefile  config.status  fase2.c  test.c  teste2  teste3  teste3.old.c
FASE2/xwc-1.1/autom4te.cache/: requests
(+111 files in other folders)
