bin_PROGRAMS= teste teste2 teste3 fase2 teclado
teste_SOURCES= teste.c xwc.c xwc.h
teste_LDADD =  $(X_LIBS) $(X_EXTRA_LIBS)

teste2_SOURCES= teste2.c 
teste2_LDADD = xwc.o

teste3_SOURCES= teste3.c samp.xpm mascara.xpm
teste3_LDADD = xwc.o

fase2_SOURCES= fase2.c corsinha_tunado.xpm saveiro_rebaixado.xpm campodefut.xpm
fase2_LDADD = xwc.o

teclado_SOURCES= teclado.c
teclado_LDADD= xwc.o
